--- a/components/main.scss
+++ b/components/main.scss
@@ -157,6 +157,7 @@ body {
 }
 
 .recently {
+  margin-bottom: 20px;
   &-heading {
     margin-bottom: 20px;
     font-weight: 700;
@@ -164,39 +165,8 @@ body {
     line-height: 1.33;
     color: #ffffff;
   }
-  &-list {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 0 20px;
-  }
-  &-thumb {
-    width: 180px;
-    height: 180px;
-    object-fit: cover;
-    border-radius: 8px;
-    margin-bottom: 12px;
-  }
-  &-name {
-    font-size: 1.6rem;
-    font-weight: 500;
-    line-height: 1.5;
-    color: #ffffff;
-  }
-  &-author {
-    font-weight: 500;
-    font-size: 1.3rem;
-    line-height: 1.7;
-    color: #ffffff99;
-  }
-}
-
-.suggestion {
-  &-heading {
-    margin-bottom: 20px;
-    font-weight: 600;
-    font-size: 2.4rem;
-    line-height: 1.33;
-    color: #ffffff;
+  &-item {
+    cursor: pointer;
   }
   &-list {
     display: grid;
@@ -233,7 +203,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 23px;
+    padding: 16px;
   }
   &-info {
     display: flex;
@@ -241,10 +211,10 @@ body {
     gap: 0 30px;
   }
   &-thumb {
-    width: 80px;
-    height: 80px;
+    width: 65px;
+    height: 65px;
     object-fit: cover;
-    border-radius: 5px;
+    border-radius: 50%;
   }
   &-title {
     font-size: 16px;
@@ -257,37 +227,97 @@ body {
     color: #ffffff99;
   }
 }
-
+.custom-volum,
 .custom {
   -webkit-appearance: none;
   width: 100%;
-  height: 15px;
-  border-radius: 5px;
-  background: #d3d3d3;
+  height: 5px;
+  background: #e8e8e8;
   outline: none;
   opacity: 0.7;
   -webkit-transition: 0.2s;
   transition: opacity 0.2s;
 }
-
+.custom {
+  position: absolute;
+  top: 0;
+}
+.control-volum {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 .custom:hover {
   opacity: 1;
 }
-
+.custom-volum::-webkit-slider-thumb,
 .custom::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 25px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background: #87a9ed;
+  cursor: pointer;
+}
+.custom-volum::-moz-range-thumb,
+.custom::-moz-range-thumb {
+  width: 10px;
   height: 25px;
   border-radius: 50%;
   background: #04aa6d;
   cursor: pointer;
 }
-
-.custom::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: #04aa6d;
+.control-play {
+  display: flex;
+  align-items: center;
+  gap: 0 20px;
+}
+.control-icon {
   cursor: pointer;
+  display: flex;
+  width: 44px;
+  height: 44px;
+  background: transparent;
+  border-radius: 50%;
+}
+.control-icon:nth-child(3) {
+  background-color: #fff;
+}
+
+.control-icon:active {
+  background: #fff;
+}
+
+.control-icon:nth-child(3) .playing {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  line-height: 44px;
+}
+.control-icon:not(:nth-child(3)) {
+  color: #fff;
+}
+.control-icon i {
+  margin: auto;
+}
+.fa-pause {
+  color: #0c0c0c;
+}
+
+.volumn-text {
+  color: #fff;
+}
+
+.rotate {
+  animation: rotate linear 8s infinite;
+}
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.repeat.active,
+.random.active {
+  color: red;
 }
